--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-seoul/kakao-login": "^5.3.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native": "0.72.1"
   },
   "devDependencies": {
