--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.7",
-    "@tsconfig/react-native": "^3.0.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.2",
     "@types/metro-config": "^0.76.3",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.5",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=16"
